fix(thumbnail-form): Reposition forms on small screens to avoid crop

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -200,13 +200,11 @@ article section.content .work-thumbnail a:focus-visible {
 .thumbnail-forms-list {
 	position: absolute;
 	top: 0;
-	left: 0;
+	right: 0;
 	pointer-events: none;
 	z-index: 1;
-	transition: left 2000ms cubic-bezier(0.19, 1, 0.22, 1);
-	width: 100vw;
-	height: 100vh;
-	height: calc(var(--vh, 1vh) * 100);
+	width: 100%;
+	height: 100lvh;
 	max-width: 1280px;
 }
 .maxWidthReached .thumbnail-forms,
@@ -221,24 +219,28 @@ article section.content .work-thumbnail a:focus-visible {
 	transition-delay: 100ms;
 }
 .thumbnail-form {
-	float: left;
 	opacity: 0;
 	transition: opacity 2000ms cubic-bezier(0.19, 1, 0.22, 1);
-	width: 100vw;
-	height: 100vh;
-	height: calc(var(--vh, 1vh) * 100);
-	max-width: 1280px;
+	width: 100%;
+	height: 100lvh;
 	text-align: right;
-	margin-right: 50px;
 	box-sizing: border-box;
-	padding: 32px 0 0 0;
+	padding: 0;
+	margin: 0;
+	transform-origin: top right;
 }
 .thumbnail-form.active {
 	opacity: 1;
 }
+@media (min-width: 320px) {
+	.thumbnail-form {
+		translate: 50px -50px;
+	}
+}
 @media (max-width: 600px) {
 	.thumbnail-form {
-		transform: translate(19vmax, -28vmax) scale(0.6);
+		scale: 0.5;
+		translate: 25px -25px;
 	}
 }
 
